--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,8 @@ header {
     justify-content: space-between;
     flex-wrap: wrap;
     border-bottom: solid white;
-    
+    top: 0;
+    position: sticky;
 }
 
 header nav {
