--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    align-items: center;
     border-bottom: solid white;
     top: 0;
     position: sticky;
@@ -54,6 +55,7 @@ nav ul li a {
 
 nav ul li a:hover {
     background-color: black;
+    border-radius: 10px;
 } 
 
 #about-me {
@@ -86,9 +88,27 @@ nav ul li a:hover {
     
 }
 .works {
+    padding: 10px;
     color: white;
+    border-bottom: 2px solid white;
+    margin-left: 45px;
+    
 }
 
+.works img {
+    border: 2px solid white;
+}
+.web-applications  {
+    
+}
+
+.web-applications img:hover {
+    
+} 
+
+#contact-me {
+    
+}
 .contact {
     color: white;
 }
