added some padding and margin-bottom to the contact me at bottom of page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,14 +107,21 @@ nav ul li a:hover {
 } 
 
 #contact-me {
-    
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 30px;
+    padding-bottom: 30px;
 }
 .contact {
     color: white;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 .contact a {
     color: white;
+    font-weight: bold;
+    
 }
 
 
