--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
 body {
     font-family: Helvetica, Arial, sans-serif;
     background: #414141;
+    width: 100%;
 
 }
 
@@ -97,12 +98,13 @@ nav ul li a:hover {
 
 .works img {
     border: 2px solid white;
-    opacity: 0.7;
+    opacity: 0.6;
 
 }
 
 .works img:hover {
     opacity: 1;
+    
 }
 
 #contact-me {
@@ -110,6 +112,7 @@ nav ul li a:hover {
     justify-content: space-around;
     margin-bottom: 30px;
     padding-bottom: 30px;
+    padding-top: 30px;
 }
 .contact {
     color: white;
